IC-Test/objects/Trigger_Controls__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used to turn on / off triggers in SFDC</description>
    <fields>
        <fullName>Check_Duplicate_Alias__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not to check duplicate aliases when a User record is saved</description>
        <label>Check for Duplicate User Aliases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Giam_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, Trigger is active.</description>
        <inlineHelpText>Uncheck the box to deactivate the Giam User trigger.  Check the box to activate it.</inlineHelpText>
        <label>Giam Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Last_Modified_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this is checked, all the triggers that have to do with User Last Modified User and Date, will fire. Uncheck and they will now. (Accounts, Contacts, Opportunities, Waste Streams, CPPs, Sample Requests and Activites)</description>
        <label>User Last Modified Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_s_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets User&apos;s Manager based on the Manager PerNr on the User record.</description>
        <label>User&apos;s Manager</label>
        <type>Checkbox</type>
    </fields>
    <label>CustomTriggerControls</label>
</CustomObject>